# LME-Machine-Learning

./: BestRun_output_04212022.txt  Classifier_GradientBoostedTrees_1v1_Logs.txt  Classifier_RandomForestEnsemble_Logs.txt  LICENSE  PredictionsOutsideTrainingDataSet.xlsx  PredictionsOutsideTrainingDataSet_ExpandedAnalysis.xlsx  README.md  data.csv  data_0.csv  data_mech_1.csv  data_mech_3.csv  features.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  test_script.py  ~$PredictionsOutsideTrainingDataSet_ExpandedAnalysis.xlsx
04082023_Run/: Classifier_GradientBoostedTrees_1v1_Logs.txt  Classifier_KNN_1v1_Logs.txt  Classifier_KNN_Multi_Logs.txt  Classifier_RandomForestEnsemble_Logs.txt
Older_Run/: Classifier_GradientBoostedTrees_1v1_Logs.txt  Classifier_RandomForestEnsemble_Logs.txt
src/data/: The Tome 3-22-21.txt  The Tome 3-22-21.xlsx  The Tome 3-22-21_data_mech_2.csv  Tome_2023_04_08.txt  Tome_2023_04_08.xlsx  Tome_2023_04_08_HumanReadable.txt  Tome_2023_04_08_data_mech_0.csv  Tome_2023_04_08_data_mech_1.csv  Tome_2023_04_08_data_mech_2.csv  Tome_2023_04_08_data_mech_3.csv  Tome_Duplicate.xlsx
src/data/FramptonStyle/: AvValNC3.xlsx  SectionsNC3.xlsx  Test_Data.xlsx  X.xlsx
src/data/Old/: y.xlsx
src/data/TomeManagement/: Preprediction_systems_and_info.txt  The Tome 3-22-21.txt  The Tome 3-22-21_data_mech_0.csv  The Tome 3-22-21_data_mech_1.csv  (+6 more)
src/lme/: AllVAll2.py  Alloy.py  Classifer_KNN_Multi.py  Classifier_GradientBoostedTrees_1v1.py  Classifier_KNN_1v1.py  Classifier_RandomForestEnsemble.py  OneVOne.py  Tome.py
(+12 files in other folders)
