[metadata]
name = lme
description = Machine Learning for LME Prediction
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Blackbelt1221/LME-Machine-Learning-Redux
author = Benjamin A. Begley, Cameron Frampton
autho_email = benjamin.begley@ufl.edu,
license = MIT
license_file = LICENSE
platforms = win_amd64
classifiers = 
    Programming Language :: Python :: 3.9


[options]
packages = 
    lme
install_requires = 
    pandas >= 1.3
    numpy >= 1.22
    scikit-learn >= 1.0
    matplotlib >= 3.5
    tensorflow >= 2.7
    seaborn >= 0.11
python_requires = 
    >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8 >= 4.0
    tox >= 3.24
    pytest >= 6.2
    pytest-cov >= 3.0
    mypy >= 0.910
    black >= 21

[options.package_data]
lme = py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, E501


